fix mobile horizontal scroll
+ navigation nesting (overlay in nav)
+ lower menus z-index

--- a/src/styles/no-js.css
+++ b/src/styles/no-js.css
@@ -3,6 +3,10 @@
 		display: none;
 		visibility: hidden;
 	}
+
+	.fade-in {
+		animation: fadeIn 2s ease-in-out forwards;
+	}
 }
 
 noscript {
